--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
 
     <p><a href="mainForm">Enter the Store</a></p>
 
-    <p><sub>Copyright NingF.org</sub></p>
+    <p><sub>Copyright zjcylflzhTEAM</sub></p>
 
 </div>
 
